--- a/src/view/side/index.component.html
+++ b/src/view/side/index.component.html
@@ -18,7 +18,11 @@
         }}</span>
       </div>
 
-      <ul nz-menu nzMode="inline" class="sider dark-scrollbar dark-bg">
+      <ul
+        nz-menu
+        nzMode="inline"
+        class="sider dark-scrollbar dark-bg select-none"
+      >
         <li
           nz-submenu
           *ngFor="
