--- a/src/components/card/index.component.scss
+++ b/src/components/card/index.component.scss
@@ -2,6 +2,13 @@
   position: relative;
   width: 100%;
   height: 100%;
+  &:hover {
+    ::ng-deep {
+      .tag-action {
+        display: flex;
+      }
+    }
+  }
   ::ng-deep {
     img {
       max-width: 100%;
@@ -287,7 +294,7 @@
     word-wrap: break-word;
     white-space: pre-wrap;
     font-size: 12px;
-    margin: 5px 0;
+    margin-bottom: 5px;
   }
 
   .top {
@@ -295,5 +302,8 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid #eee;
+  }
+  .border-transparent {
+    border-color: transparent;
   }
 }
