feat: Update type definitions, add inclusion prompts and processing functions, optimize login components and styles

--- a/src/components/card/index.component.scss
+++ b/src/components/card/index.component.scss
@@ -83,8 +83,8 @@
     }
   }
   .desc {
-    padding-bottom: 5px;
     font-size: 13px;
+    margin-bottom: 5px;
   }
   .actionbar {
     display: flex;
