feat: Add event handling to support page refresh

--- a/src/view/side/index.component.html
+++ b/src/view/side/index.component.html
@@ -2,7 +2,7 @@
   <nz-spin
     nzSimple
     *ngIf="commonService.sliceMax === 0"
-    class="position-center"
+    class="position-center z-50 mt-24"
   />
   <nz-layout>
     <nz-sider
