--- a/src/view/system/index.component.html
+++ b/src/view/system/index.component.html
@@ -76,8 +76,8 @@
 
         <li
           nz-menu-item
-          [nzSelected]="currentMenu === 'vip'"
-          (click)="goRoute('/system/vip')"
+          [nzSelected]="currentMenu === 'auth'"
+          (click)="goRoute('/system/auth')"
         >
           {{ $t('_vipAuth') }}
         </li>
