--- a/src/components/card/index.component.scss
+++ b/src/components/card/index.component.scss
@@ -133,6 +133,7 @@
     width: 100%;
     font-weight: 500;
     line-height: 18px;
+    font-size: 15px;
   }
   .breadcrumb1 {
     padding: 0 0 4px 0;
