--- a/src/components/toolbar-title/index.component.html
+++ b/src/components/toolbar-title/index.component.html
@@ -22,7 +22,7 @@
   </span>
 
   <i
-    *ngIf="isLogin || settings.allowCollect"
+    *ngIf="isLogin || permissions.create"
     nz-icon
     nzType="plus"
     nzTheme="outline"
