--- a/src/view/system/web/index.component.html
+++ b/src/view/system/web/index.component.html
@@ -465,7 +465,7 @@
                 nz-popconfirm
                 [nzPopconfirmTitle]="$t('_confirmDel')"
                 nzPopconfirmPlacement="bottom"
-                (nzOnConfirm)="handleConfirmDelWebsite(data, idx)"
+                (nzOnConfirm)="handleConfirmDelWeb(data)"
                 class="color-red"
               >
                 {{ $t('_del') }}
