--- a/src/components/html/index.component.html
+++ b/src/components/html/index.component.html
@@ -1,5 +1,7 @@
 <div
   class="html family citems"
-  [innerHTML]="data['html'] | safeHtml"
   [style.zoom]="data['zoom']"
+  [style.width]="data['width'] + 'px'"
+  [innerHTML]="data['html'] | safeHtml"
+  #root
 ></div>
