--- a/src/components/move-web/index.component.html
+++ b/src/components/move-web/index.component.html
@@ -31,7 +31,7 @@
     >
       <nz-option
         *ngFor="let item of twoOptList; index as idx"
-        [nzLabel]="item.title || ''"
+        [nzLabel]="item.title"
         [nzValue]="idx"
       >
       </nz-option>
@@ -47,7 +47,7 @@
     >
       <nz-option
         *ngFor="let item of threeOptList; index as idx"
-        [nzLabel]="item.title || ''"
+        [nzLabel]="item.title"
         [nzValue]="idx"
       >
       </nz-option>
