--- a/src/view/system/auth/index.component.html
+++ b/src/view/system/auth/index.component.html
@@ -39,7 +39,7 @@
         nzDanger
         (click)="logoutAuthCode()"
         [nzLoading]="submitting"
-        class="mt-2.5 ml-2.5"
+        style="margin-left: 20px"
       >
         {{ $t('_logoutAuthCode') }}
       </button>
