--- a/src/components/html/drawer/index.component.html
+++ b/src/components/html/drawer/index.component.html
@@ -18,6 +18,13 @@
         </textarea>
       </nz-form-control>
     </nz-form-item>
+
+    <nz-form-item>
+      <nz-form-label [nzSpan]="4">Width</nz-form-label>
+      <nz-form-control [nzSpan]="20">
+        <nz-slider formControlName="width" [nzMax]="1000"></nz-slider>
+      </nz-form-control>
+    </nz-form-item>
   </form>
 
   <ng-template #footerTpl>
