--- a/src/view/light/index.component.html
+++ b/src/view/light/index.component.html
@@ -24,9 +24,9 @@
             index as i;
             trackBy: commonService.trackByItem
           "
-          (click)="commonService.handleCilckTopNav(i)"
-          [class.active]="commonService.page === i"
-          [class.dark-text-active]="commonService.page === i"
+          (click)="commonService.handleClickClass(item.id)"
+          [class.active]="commonService.oneIndex === i"
+          [class.dark-text-active]="commonService.oneIndex === i"
           class="over-item ripple-btn dark-text"
         >
           {{ item.title }}
@@ -38,8 +38,8 @@
             commonService.websiteList.slice(commonService.overIndex, 99999)
           "
           [index]="commonService.overIndex"
-          [page]="commonService.page"
-          (onClick)="commonService.handleCilckTopNav($event)"
+          [page]="commonService.oneIndex"
+          (onClick)="commonService.handleClickClass($event)"
         />
       </nav>
 
@@ -48,14 +48,15 @@
           class="sidebar dark-bg dark-border-color dark-scrollbar"
           id="sidebar"
         >
-          <div *ngIf="commonService.websiteList[commonService.page]">
+          <div *ngIf="commonService.websiteList[commonService.oneIndex]">
             <div
               class="tag dark-text"
-              [class.active]="commonService.id === i"
-              [class.dark-item-active]="commonService.id === i"
-              (click)="commonService.handleSidebarNav(i)"
+              [class.active]="commonService.twoIndex === i"
+              [class.dark-item-active]="commonService.twoIndex === i"
+              (click)="commonService.handleClickClass(item.id)"
               *ngFor="
-                let item of commonService.websiteList[commonService.page].nav;
+                let item of commonService.websiteList[commonService.oneIndex]
+                  .nav;
                 index as i;
                 trackBy: commonService.trackByItem
               "
@@ -112,7 +113,12 @@
                   <app-card
                     [cardStyle]="commonService.settings.lightCardStyle"
                     [dataSource]="el"
-                    [indexs]="[commonService.page, commonService.id, i, j]"
+                    [indexs]="[
+                      commonService.oneIndex,
+                      commonService.twoIndex,
+                      i,
+                      j
+                    ]"
                     [searchKeyword]="commonService.searchKeyword"
                     class="column-border"
                   />
