--- a/src/view/system/collect/index.component.html
+++ b/src/view/system/collect/index.component.html
@@ -6,6 +6,7 @@
       nzType="primary"
       (click)="handleSubmit()"
       [nzLoading]="submitting"
+      style="margin-right: 20px"
     >
       {{ $t('_save') }}
     </button>
@@ -14,12 +15,27 @@
       {{ $t('_refresh') }}
     </button>
 
+    <button
+      nz-button
+      nzType="primary"
+      nzDanger
+      (click)="batchDelete()"
+      [nzLoading]="submitting"
+      style="margin-left: 20px"
+    >
+      {{ $t('_del') }}
+    </button>
+
     <div class="mb-2.5 mt-2.5 color-red font-bold" *ngIf="!isSelfDevelop">
       处理完成所有数据后需要点击一次保存方可生效
     </div>
     <nz-table #basicTable [nzData]="dataList" [nzShowPagination]="false">
       <thead>
         <tr>
+          <th
+            [nzChecked]="checked"
+            (nzCheckedChange)="onAllChecked($event)"
+          ></th>
           <th nzWidth="80px">{{ $t('_action') }}</th>
           <th nzWidth="80px">{{ $t('_type') }}</th>
           <th nzWidth="80px">ID</th>
@@ -33,23 +49,12 @@
       </thead>
       <tbody>
         <tr *ngFor="let data of dataList; index as idx; trackBy: trackByItem">
+          <td
+            [nzChecked]="setOfCheckedId.has(data.extra.uuid)"
+            (nzCheckedChange)="onItemChecked(data.extra.uuid, $event)"
+          ></td>
           <td>
-            <div>
-              <a (click)="handleClick(data, idx)">{{ $t('_handle') }}</a>
-            </div>
-            <div class="mt-2.5">
-              <a
-                nz-popconfirm
-                nzPopconfirmPlacement="rightTop"
-                nzOkType="danger"
-                [nzPopconfirmTitle]="$t('_confirmDel')"
-                nzPopconfirmPlacement="bottom"
-                (nzOnConfirm)="handleDelete(idx)"
-                class="color-red"
-              >
-                {{ $t('_del') }}
-              </a>
-            </div>
+            <a (click)="handleClick(data, idx)">{{ $t('_handle') }}</a>
           </td>
           <td>{{ typeMap[data.extra.type] }}</td>
           <td>{{ data.id }}</td>
